<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_linear_layout"
    android:background="@color/background_main">

    <TextView
        android:id="@+id/edit_todo_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center_horizontal"
        android:padding="6sp"
        android:text="@string/edit_todo_list_item_title"
        android:textColor="@color/create_todo_list_title_color"
        android:textSize="24dp"
        android:textStyle="bold" />
    <EditText
        android:layout_marginTop="12sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:gravity="top"
        android:hint="@string/new_todolist_item_name"
        android:id="@+id/edit_view_todo_list_item_title"
        android:background="@color/edit_view_color_bgr"
        android:layout_margin="6sp"
        android:padding="5dp"
        />

    <EditText
        android:layout_marginTop="12sp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="20sp"
        android:gravity="top"
        android:hint="@string/new_todolist_item_description"
        android:id="@+id/edit_view_todo_list_item_description"
        android:background="@color/edit_view_color_bgr"
        android:layout_margin="6sp"
        android:padding="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_date_time"
        android:gravity="center"
        />
    <CheckBox
        android:id="@+id/todo_list_item_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="completed"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit_todolist_button"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal_700"
            android:id="@+id/edit_button_todo_list_item"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/archive_todo_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/archive_todolist_item"
            app:backgroundTint="#00BCD4" />
        <Button
            android:id="@+id/delete_button_todo_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"


            android:text="@string/delete_todolist_button"
            android:textAllCaps="false"
            app:backgroundTint="#F44336" />



    </LinearLayout>




</LinearLayout>